Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -39,9 +39,17 @@
 </code></pre>
 
 <hr><ul>
-<li>Head on over to the <a href="http://dev.bukkit.org/">bukkit site</a> to check out my plugin(s)</li>
+<li>Head on over to the <a href="http://dev.bukkit.org/profiles/austinv11">bukkit site</a> to check out my plugin(s)</li>
 <li>Check me out on the <a href="http://www.computercraft.info/forums2/index.php?/user/15849-austinv11/">computercraft forums</a>
 </li>
+<li>Check me out on <a href="https://github.com/austinv11/">GitHub</a>
+</li>
+</ul><hr><h2>
+<a name="some-of-my-what-i-think-are-cool-projects" class="anchor" href="#some-of-my-what-i-think-are-cool-projects"><span class="octicon octicon-link"></span></a>Some of my (what I think are) cool projects:</h2>
+
+<ul>
+<li>
+<a href="http://dev.bukkit.org/bukkit-plugins/lootplus/">LootPlus</a> a Bukkit plugin</li>
 </ul><hr><p>Man do I wish I was a web developer right now :/</p>
       </section>
     </div>
