Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
 
 <ul>
 <li>
-<a href="http://dev.bukkit.org/bukkit-plugins/lootplus/">LootPlus</a> a Bukkit plugin</li>
+<a href="http://dev.bukkit.org/bukkit-plugins/lootplus/"><img src="http://dev.bukkit.org/media/images/72/465/LootPlus__2_.png" alt="LootPlus Icon"></a> a Bukkit plugin</li>
+<li>
+<a href="http://dev.bukkit.org/bukkit-plugins/enhancedspawners/"><img src="http://dev.bukkit.org/media/images/72/864/EnhancedSpawners_Logo__1_.png" alt="EnhancedSpawners Icon"></a> a Bukkit plugin</li>
 </ul><hr><p>Man do I wish I was a web developer right now :/</p>
       </section>
     </div>
