--- a/jenkins/index.html
+++ b/jenkins/index.html
@@ -6,11 +6,5 @@
 </body>
 </head>
 <embed 
-  id="Jenkins"
-  type="application/x-java-applet;version=1.6"
-  width="999" height="999" 
-  archive="jenkins.war"
-  code="Main.class"
-  pluginspage="http://java.com/download/"
-  myParam="" />
+  src="jenkins.war">
 </html>
