--- a/index.html
+++ b/index.html
@@ -1,6 +1,37 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+
+    <title>WIP</title>
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <h1>Austin&#39;s Random Things</h1>
+        <h2>A site for random stuff from me</h2>
+
+        <section id="downloads">
+          <a href="https://github.com/austinv11" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
+
+    <div class="container">
+      <section id="main_content">
+        <h1>
+<a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Welcome!</h1>
+
+<h2>
+<a name="soon(tm)" class="anchor" href="#this-is-just-another-site-created-by-austin-aka-austinv11"><span class="octicon octicon-link"></span></a>Soon(tm)</h2>
+
+  </body>
+  <!--
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -69,4 +100,5 @@
   ga('send', 'pageview');
 
 </script>
+-->
 </html>
