--- a/index.html
+++ b/index.html
@@ -25,11 +25,7 @@
     <div class="container">
       <section id="main_content">
         <h1>
-<a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Welcome!</h1>
-
-<h2>
-<a name="soon(tm)" class="anchor" href="#this-is-just-another-site-created-by-austin-aka-austinv11"><span class="octicon octicon-link"></span></a>Soon(tm)</h2>
-
+<a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>This site will be working soon(tm)</h1>
   </body>
   <!--
   <head>
